--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>OkstateACM Fall 2017 Programming Competition</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link href="https://bootswatch.com/slate/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
