--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <hr>
 
-    <h1>Problem 1 (3 points)</h1>
+    <h1>Problem 1: Diagonally Reversed</h1>
     <div class="well">
       <b>Given an input read from stdin, print it backwards and diagonally.</b>
       <h2>Specifications</h2>
