--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <hr>
 
-    <h1>Problem 1: Diagonally Reversed</h1>
+    <h1>Problem 1: Diagonally Reversed (3 points)</h1>
     <div class="well">
       <b>Given an input read from stdin, print it backwards and diagonally.</b>
       <h2>Specifications</h2>
@@ -109,7 +109,7 @@
 
     <hr>
 
-    <h1>Problem 3: The rorrim mirror (3 points)</h1>
+    <h1>Problem 3: The rorrim mirror (4 points)</h1>
     <div class="well">
       <b>Given an integer n, and a list of n words, print out n lines. Each line should have one of the words from the list, first printed backwards, then printed forwards, with one space inbetween. On any given line, there must be enough leading spaces so that the first character of the words line up on the printout.</b>
       <h2>Specifications</h2>
@@ -131,7 +131,7 @@
 
     <hr>
 
-    <h1>Problem 4: 2D Palindromes</h1>
+    <h1>Problem 4: 2D Palindromes (6 points)</h1>
     <div class="well">
       A 2 dimensional array is a rectangular array of elements. The reverse image of a 2 dimensional array is defined to be the array reversed in both directions.
       For example, the reverse image of
@@ -189,7 +189,7 @@
     <hr />
 
 
-    <h1>Problem 5: So many integer sequences... (3 points)</h1>
+    <h1>Problem 5: So many integer sequences... (7 points)</h1>
     <div class="well">
       The fibonacci sequence is defined as follows:
       <div class="well">
@@ -225,7 +225,7 @@
     </div>
 
     <hr />
-    <h1>Problem 6: Collatz</h1>
+    <h1>Problem 6: Collatz (7 points)</h1>
     <div class="well">
       The Collatz sequence is defined as:
       <div class="well">
@@ -265,7 +265,7 @@
 
     <hr />
 
-    <h1>Problem 7: Rattle Battle</h1>
+    <h1>Problem 7: Rattle Battle (15 points)</h1>
     <div class="well">
       <b>Baby Henry is missing his rattle. To get to it, he must
       cross the floor from his current position to the position
@@ -311,7 +311,7 @@
 
     <hr />
 
-    <h1>BB-8's Dilemna</h1>
+    <h1>Problem 8: BB-8's Dilemna (15 points)</h1>
     <div class="well">
       The droid BB-8 got stuck in a cavern. You need to help BB-8 get out. You know that the cavern is flat and consists of N "rooms". You also know that there are H*W number of rooms, where H is the height of the cavern and W is the width of the cavern. Assume that each "room" takes up one space.
       <br />
