Integrate the styling from other acm webpages (to keep it consistent)

--- a/index.html
+++ b/index.html
@@ -5,15 +5,32 @@
   <title>OkstateACM Fall 2017 Programming Competition</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link href="https://bootswatch.com/slate/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="./images/favicon.ico" sizes="64x64" type="image/vnd.microsoft.icon">
 </head>
 <body>
 
-  <div class="container">
-    <div class="jumbotron text-center">
-      <h1 class="page-header">OkstateACM Programming Contest Fall 2017</h1>
+  <!-- JUMBOTRON -->
+  <div class="jumbotron">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-3">
+          <a href="http://cs.okstate.edu/acm/"><img src="./images/acm.png" class="img-responsive header-image" width="75%"/></a>
+        </div>
+        <div class="col-xs-6">
+          <h1 class="title">Programming Competition</h1>
+          <h2 class="subtitle">October 4, 2017</h2>
+        </div>
+        <div class="col-xs-3">
+          <a href="http://okstate.edu/"><img src="./images/osu.png" class="img-responsive header-image" width="75%"/></a>
+        </div>
+      </div>
     </div>
+  </div>
 
+  <div class="container">
 
     <div class="panel panel-primary">
       <div class="panel-heading">
