Add title to the instructions portion of each question

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 
     <h1>Problem 1: Diagonally Reversed (3 points)</h1>
     <div class="well">
+      <h2>Instructions</h2>
       <b>Given an input read from stdin, print it backwards and diagonally.</b>
       <h2>Specifications</h2>
       Input: A string
@@ -95,6 +96,7 @@
 
     <h1>Problem 2: Caesar Cipher (3 points)</h1>
     <div class="well">
+      <h2>Instructions</h2>
       The caesar cipher is a (very outdated...) method of encryption that uses a key, also known as a shift, to encrypt messages.
               <br />
               To encrypt any letter of the alphabet, you simply add the shift to it. For example, with a shift of <code>3</code>, <code>a</code> becomes <code>a + 3</code> which is <code>d</code>, <code>b</code> becomes <code>e</code>, etc. <a href="https://github.com/OKStateACM/CryptoWorkshop/blob/master/Notes_draft.md">Some more info on the notes from our cryptography workshop</a>
@@ -128,6 +130,7 @@
 
     <h1>Problem 3: The rorrim mirror (4 points)</h1>
     <div class="well">
+      <h2>Instructions</h2>
       <b>Given an integer n, and a list of n words, print out n lines. Each line should have one of the words from the list, first printed backwards, then printed forwards, with one space inbetween. On any given line, there must be enough leading spaces so that the first character of the words line up on the printout.</b>
       <h2>Specifications</h2>
       Input: Integer n, followed by n words
@@ -150,6 +153,7 @@
 
     <h1>Problem 4: 2D Palindromes (6 points)</h1>
     <div class="well">
+      <h2>Instructions</h2>
       A 2 dimensional array is a rectangular array of elements. The reverse image of a 2 dimensional array is defined to be the array reversed in both directions.
       For example, the reverse image of
       <div class="well">
@@ -208,6 +212,7 @@
 
     <h1>Problem 5: So many integer sequences... (7 points)</h1>
     <div class="well">
+      <h2>Instructions</h2>
       The fibonacci sequence is defined as follows:
       <div class="well">
         fib(n) = fib(n-1) + fib(n-2),
@@ -244,6 +249,7 @@
     <hr />
     <h1>Problem 6: Collatz (7 points)</h1>
     <div class="well">
+      <h2>Instructions</h2>
       The Collatz sequence is defined as:
       <div class="well">
         Start with any positive integer <code>n</code>.
@@ -284,6 +290,7 @@
 
     <h1>Problem 7: Rattle Battle (15 points)</h1>
     <div class="well">
+      <h2>Instructions</h2>
       <b>Baby Henry is missing his rattle. To get to it, he must
       cross the floor from his current position to the position
       of the rattle, avoiding obstacles as he goes.  Henry
@@ -330,6 +337,7 @@
 
     <h1>Problem 8: BB-8's Dilemna (15 points)</h1>
     <div class="well">
+      <h2>Instructions</h2>
       The droid BB-8 got stuck in a cavern. You need to help BB-8 get out. You know that the cavern is flat and consists of N "rooms". You also know that there are H*W number of rooms, where H is the height of the cavern and W is the width of the cavern. Assume that each "room" takes up one space.
       <br />
       <br />
