--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </div>
       <div class="panel-body">
         Use Java, C, C++, or Python3 to implement a solution to the problems listed below.
-        When you are done, come pass it off the one of the judges.
+        When you are done, come pass it off to one of the judges.
         You have from now until 8:30 P.M. Most points win. Good luck.
       </div>
     </div>
