--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
         corresponding to an optimal route for Henry.
       </div>
 
-      <h2>Test Cases</h2>
+      <h2>Example Run</h2>
       Input (read from stdin or from a file, your choice):
       <div class="well">
         5
