Add (still not final) point values to each question

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
     <hr>
 
-    <h1>Problem 1: Diagonally Reversed (3 points)</h1>
+    <h1>Problem 1: Diagonally Reversed (1 point)</h1>
     <div class="well">
       <h2>Instructions</h2>
       <b>Given an input read from stdin, print it backwards and diagonally.</b>
@@ -94,7 +94,7 @@
 
     <hr>
 
-    <h1>Problem 2: Caesar Cipher (3 points)</h1>
+    <h1>Problem 2: Caesar Cipher (1 point)</h1>
     <div class="well">
       <h2>Instructions</h2>
       The caesar cipher is a (very outdated...) method of encryption that uses a key, also known as a shift, to encrypt messages.
@@ -128,7 +128,7 @@
 
     <hr>
 
-    <h1>Problem 3: The rorrim mirror (4 points)</h1>
+    <h1>Problem 3: The rorrim mirror (1 point)</h1>
     <div class="well">
       <h2>Instructions</h2>
       <b>Given an integer n, and a list of n words, print out n lines. Each line should have one of the words from the list, first printed backwards, then printed forwards, with one space inbetween. On any given line, there must be enough leading spaces so that the first character of the words line up on the printout.</b>
@@ -151,7 +151,7 @@
 
     <hr>
 
-    <h1>Problem 4: 2D Palindromes (6 points)</h1>
+    <h1>Problem 4: 2D Palindromes (2 points)</h1>
     <div class="well">
       <h2>Instructions</h2>
       A 2 dimensional array is a rectangular array of elements. The reverse image of a 2 dimensional array is defined to be the array reversed in both directions.
@@ -210,7 +210,7 @@
     <hr />
 
 
-    <h1>Problem 5: So many integer sequences... (7 points)</h1>
+    <h1>Problem 5: So many integer sequences... (3 points)</h1>
     <div class="well">
       <h2>Instructions</h2>
       The fibonacci sequence is defined as follows:
@@ -247,7 +247,7 @@
     </div>
 
     <hr />
-    <h1>Problem 6: Collatz (7 points)</h1>
+    <h1>Problem 6: Collatz (3 points)</h1>
     <div class="well">
       <h2>Instructions</h2>
       The Collatz sequence is defined as:
@@ -288,7 +288,7 @@
 
     <hr />
 
-    <h1>Problem 7: Rattle Battle (15 points)</h1>
+    <h1>Problem 7: Rattle Battle (6 points)</h1>
     <div class="well">
       <h2>Instructions</h2>
       <b>Baby Henry is missing his rattle. To get to it, he must
@@ -355,7 +355,7 @@
 
     <hr />
 
-    <h1>Problem 8: BB-8's Dilemna (15 points)</h1>
+    <h1>Problem 8: BB-8's Dilemna (6 points)</h1>
     <div class="well">
       <h2>Instructions</h2>
       The droid BB-8 got stuck in a cavern. You need to help BB-8 get out. You know that the cavern is flat and consists of N "rooms". You also know that there are H*W number of rooms, where H is the height of the cavern and W is the width of the cavern. Assume that each "room" takes up one space.
@@ -417,7 +417,7 @@
 
     <!-- TODO Show Grid System Better -->
 
-    <h1>Problem 9: On The Grid (What the Funge?)</h1>
+    <h1>Problem 9: On The Grid (What the Funge?) (20 points)</h1>
     <div class="well">
       <a href="https://esolangs.org/wiki/Befunge">Befunge</a> is an esoteric programming language that
       uses a grid system. It was designed specifically to be the hardest programming language to write
