Add section thanking paycom

--- a/index.html
+++ b/index.html
@@ -584,6 +584,18 @@
 
     </div>
 
+    <hr>
+
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h1>Thank You To Our Sponsors</h1>
+      </div>
+      <div class="panel-body">
+        <img src="images/paycom_logo.png" alt="Paycom Logo">
+        <h3>Huge thank you to <a href="http://www.paycomonline.com/">Paycom</a> for providing pizza and prizes for this Programming Competition!</h3>
+      </div>
+    </div>
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
